20070605
 - (dtucker) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2007/05/22 10:18:52
     [sshd.c]
     zap double include; from p_nowaczyk AT o2.pl
     (not required in -portable, Id sync only)

20070520
 - (dtucker) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2007/04/14 22:01:58
     [auth2.c]
     remove unused macro; from Dmitry V. Levin <ldv@altlinux.org>
   - stevesk@cvs.openbsd.org 2007/04/18 01:12:43
     [sftp-server.c]
     cast "%llu" format spec to (unsigned long long); do not assume a
     u_int64_t arg is the same as 'unsigned long long'.
     from Dmitry V. Levin <ldv@altlinux.org>
     ok markus@ 'Yes, that looks correct' millert@
   - dtucker@cvs.openbsd.org 2007/04/23 10:15:39
     [servconf.c]
     Remove debug() left over from development.  ok deraadt@
   - djm@cvs.openbsd.org 2007/05/17 07:50:31
     [log.c]
     save and restore errno when logging; ok deraadt@
   - djm@cvs.openbsd.org 2007/05/17 07:55:29
     [sftp-server.c]
     bz#1286 stop reading and processing commands when input or output buffer
     is nearly full, otherwise sftp-server would happily try to grow the
     input/output buffers past the maximum supported by the buffer API and
     promptly fatal()
     based on patch from Thue Janus Kristensen; feedback & ok dtucker@
   - djm@cvs.openbsd.org 2007/05/17 20:48:13
     [sshconnect2.c]
     fall back to gethostname() when the outgoing connection is not
     on a socket, such as is the case when ProxyCommand is used.
     Gives hostbased auth an opportunity to work; bz#616, report
     and feedback stuart AT kaloram.com; ok markus@
   - djm@cvs.openbsd.org 2007/05/17 20:52:13
     [monitor.c]
     pass received SIGINT from monitor to postauth child so it can clean
     up properly. bz#1196, patch from senthilkumar_sen AT hotpop.com;
     ok markus@
   - jolan@cvs.openbsd.org 2007/05/17 23:53:41
     [sshconnect2.c]
     djm owes me a vb and a tism cd for breaking ssh compilation